# Trip-Planner-App

./: .gitignore  LICENSE  README.md  pyproject.toml
trip_planner/: __init__.py  app_context.py  auth.py  callbacks.py  components.py  ids.py  main.py  marker_config.py  styles.py
trip_planner/admin/: callbacks.py  crud.py  ids.py  layout.py
trip_planner/assets/: style.css
trip_planner/backend/: __init__.py  api_client.py  api_routes.py  auth.py  crud.py  database.py  landmark_registry.py  models.py  routes.py  routing_service.py  tsp_formulas.py
trip_planner/backend/auth/: __init__.py  authentication.py  authentication_endpoints.py  email_verification_routes.py
trip_planner/backend/crud/: __init__.py  landmarks.py  reviews.py  statistics.py  trips.py  users.py
trip_planner/backend/db/: __init__.py  database.py  models.py
trip_planner/callbacks/: __init__.py  auth.py  browse.py  explore.py  info.py  reviews.py  trip.py  view.py
trip_planner/callbacks/utils/: explore_route_cache.py  explore_route_layers.py  get_language.py  routing.py  trip_state.py
trip_planner/dash_store_schemas/: __init__.py
trip_planner/i18n/: __init__.py  bg.py  en.py
trip_planner/layout/: __init__.py  app_layout.py  auth.py  info_sidebar.py  map.py  markers.py  overlays.py  sidebar.py  trip_rendering.py
trip_planner/pages/: admin_panel.py  browse.py  guest.py  home.py  login.py  register.py  statistics.py
trip_planner/schemas/: __init__.py  stores.py
trip_planner/services/: __init__.py  landmark_registry.py  trip_route.py  trip_workflows.py
trip_planner/utils/: routing.py
(+14 files in other folders)
